Fix bugs with SHAP an logs

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ MINIO_SECRET_KEY=secretminio
 BUCKET_NAME=mlflow-bucket
 MINIO_PORT=9000
 MINIO_CLIENT_URL=s3:9000
+MINIO_SSL=true
 
 # Back end
 MLFLOW_TRACKING_URI=http://mlflow_server:5000
