--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,12 +96,15 @@ services:
     build: .    
     restart: always
     ports:
-      - '8080:8080'
+      - '8081:8081'
     expose:
-      - '8080'
+      - '8081'
     # volumes:
       # - .:/app/. #debugging only
-    stdin_open: true
+    stdin_open: 
+      true
+    env_file:
+      - .env
     environment:
       MLFLOW_TRACKING_URI: ${MLFLOW_TRACKING_URI}
       MLFLOW_S3_ENDPOINT_URL: ${MLFLOW_S3_ENDPOINT_URL}
