Make first serving endpoint and fix local compose

--- a/.env.example
+++ b/.env.example
@@ -11,14 +11,27 @@ MINIO_ROOT_USER=accessminio
 MINIO_ROOT_PASSWORD=secretminio
 BUCKET_NAME=mlflow-bucket
 MINIO_PORT=9000
+
+# For use through docker (CLI and front-end)
 MINIO_CLIENT_URL=s3:9000
-MINIO_SSL=true
+
+# For use without docker (CLI with conda)
+# MINIO_CLIENT_URL=localhost:9000
+
+MINIO_SSL=false
 
 # Back end
+# For use through docker (CLI and front-end)
 MLFLOW_TRACKING_URI=http://mlflow_server:5000
 MLFLOW_S3_ENDPOINT_URL=http://s3:9000
 DAGSTER_ENDPOINT_URL=http://deeptsf_dagster:8006
 GIT_PYTHON_REFRESH=quiet
+
+# For use without docker (CLI with conda)
+# MLFLOW_TRACKING_URI=http://localhost:5000
+# MLFLOW_S3_ENDPOINT_URL=http://localhost:9000
+# DAGSTER_ENDPOINT_URL=http://localhost:8006
+# GIT_PYTHON_REFRESH=quiet
 
 # Front end
 ## These environment variable cannot be set from within here. (React issues)
