--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,6 @@ services:
     ports:
       - 9000:9000
       - 9001:9001
-    environment:
-      MINIO_ROOT_USER: ${MINIO_ROOT_USER}
-      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
     networks:
       - load-forecasting-net
     command:
@@ -25,15 +22,18 @@ services:
       interval: 10s
       timeout: 10s
       retries: 3
+    env_file:
+      - .env
+      # Uses following .env parameters:
+      # MINIO_ROOT_USER
+      # MINIO_ROOT_PASSWORD
+
 
   create_bucket:
     # image: minio/mc:RELEASE.2019-07-17T22-13-42Z
     image: minio/minio:RELEASE.2024-03-30T09-41-56Z
     depends_on:
       - s3    
-    environment:
-      MINIO_ROOT_USER: ${MINIO_ROOT_USER}
-      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
     networks:
        - load-forecasting-net
     entrypoint: >
@@ -45,6 +45,12 @@ services:
       /usr/bin/mc policy set public s3/${BUCKET_NAME};
       exit 0;
       '
+    env_file:
+      - .env
+      # Uses following .env parameters:
+      # MINIO_ROOT_USER
+      # MINIO_ROOT_PASSWORD
+
 
   pgdb:
     container_name: pgdb
@@ -58,12 +64,16 @@ services:
     expose:
       - '5432'
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DATABASE: ${POSTGRES_DATABASE}
       PGDATA: /var/lib/postgresql/data/pgdata
     networks:
       - load-forecasting-net
+    env_file:
+      - .env
+      # Uses following .env parameters:
+      # POSTGRES_USER
+      # POSTGRES_PASSWORD
+      # POSTGRES_DATABASE
+
 
   mlflow_server:
     container_name: mlflow_server
@@ -74,13 +84,6 @@ services:
       - 5000:5000
     expose:
       - 5000
-    environment:
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_DATABASE: ${POSTGRES_DATABASE}
-      MLFLOW_S3_ENDPOINT_URL: http://s3:9000
-      AWS_ACCESS_KEY_ID: ${MINIO_ROOT_USER}
-      AWS_SECRET_ACCESS_KEY: ${MINIO_ROOT_PASSWORD}
     depends_on: 
       - s3
       - pgdb
@@ -88,6 +91,16 @@ services:
       - load-forecasting-net
     command: bash -c 
       "mlflow server --backend-store-uri postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@pgdb:5432/${POSTGRES_DATABASE} --host 0.0.0.0 --default-artifact-root s3://${BUCKET_NAME}/"
+    env_file:
+      - .env
+      # Uses following .env parameters:
+      # POSTGRES_PASSWORD
+      # POSTGRES_USER
+      # POSTGRES_DATABASE
+      # MLFLOW_S3_ENDPOINT_URL
+      # AWS_ACCESS_KEY_ID
+      # AWS_SECRET_ACCESS_KEY
+
 
   backend:
     hostname: deeptsf_backend
@@ -96,22 +109,16 @@ services:
     build: .    
     restart: always
     ports:
-      - '8081:8081'
+      - '8080:8080'
     expose:
-      - '8081'
+      - '8080'
     # volumes:
       # - .:/app/. #debugging only
     stdin_open: 
       true
     env_file:
       - .env
-    environment:
-      MLFLOW_TRACKING_URI: ${MLFLOW_TRACKING_URI}
-      MLFLOW_S3_ENDPOINT_URL: ${MLFLOW_S3_ENDPOINT_URL}
-      AWS_ACCESS_KEY_ID: ${MINIO_ROOT_USER}
-      AWS_SECRET_ACCESS_KEY: ${MINIO_ROOT_PASSWORD}
-      USE_KEYCLOAK: ${USE_KEYCLOAK}
-      GIT_PYTHON_REFRESH: ${GIT_PYTHON_REFRESH}
+    # Uses all .env parameters
     # deploy: # activate this if you want gpu usage
     #   resources:
     #     reservations:
@@ -128,11 +135,6 @@ services:
     build:
       context: .
       dockerfile: ./dagster-deeptsf/config/Dockerfile
-    environment:
-      MLFLOW_TRACKING_URI: ${MLFLOW_TRACKING_URI}
-      MLFLOW_S3_ENDPOINT_URL: ${MLFLOW_S3_ENDPOINT_URL}
-      AWS_ACCESS_KEY_ID: ${MINIO_ROOT_USER}
-      AWS_SECRET_ACCESS_KEY: ${MINIO_ROOT_PASSWORD}
     # deploy: # activate this if you want gpu usage
     #   resources:
     #     reservations:
@@ -149,6 +151,13 @@ services:
       # - ./dagster-deeptsf/dagster_deeptsf:/app/dagster-deeptsf/dagster_deeptsf  #debugging only
     networks:
       - load-forecasting-net
+    env_file:
+      - .env
+      # Uses following .env parameters:
+      # MLFLOW_TRACKING_URI
+      # MLFLOW_S3_ENDPOINT_URL
+      # AWS_ACCESS_KEY_ID
+      # AWS_SECRET_ACCESS_KEY
 
   frontend:
     container_name: deeptsf_dashboard
