--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -5,8 +5,8 @@ app:
   image:
     repository: harbor.deployai.eu/iccs/deeptsf_backend
     tag: latest
-  # env:
-  #   APP_BACKEND_URL: "https://deeptsf.dev.deployai.eu/"
+  env:
+    APP_BACKEND_URL: ""
   replicas: 1
   memory_limit: 4Gi
 
