--- a/helm-chart/templates/app-service.yaml
+++ b/helm-chart/templates/app-service.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   type: ClusterIP
   ports:
-    - name: https
+    - name: http
       port: 80
       protocol: TCP
       targetPort: 8081
