--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -3,7 +3,7 @@ app:
   service:
     name: deeptsf_backend
   image:
-    repository: harbor.deployai.eu/iccs/deeptsf_backend
+    repository: ${HARBOR_HOST}/iccs/deeptsf_backend
     tag: latest
   env:
     APP_BACKEND_URL: ""
