--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ build-app:
     - echo "Building Docker image for deeptsf backend..."
     - docker build -t ${HARBOR_HOST}/iccs/deeptsf_backend:latest deeptsf_backend
     - echo "Logging into Harbor using Robot Account..."
-    - echo ${HARBOR_RW_PASSWORD} | docker login ${HARBOR_HOST} -u ${HARBOR_RW_USER} --password-stdin
+    - echo ${HARBOR_ROBOT_PASSWORD} | docker login ${HARBOR_HOST} -u ${HARBOR_ROBOT_USER} --password-stdin
     - echo "Pushing Docker image to Harbor..."
     - docker push ${HARBOR_HOST}/iccs/deeptsf_backend:latest
   only:
@@ -39,7 +39,7 @@ deploy-dev:
     - echo "Checking Kubernetes cluster connectivity..."
     - kubectl get nodes
     - echo "Deploying to Rancher using Helm..."
-    - helm upgrade --install deeptsf_backend ./helm-chart -f helm-chart/values.yaml --namespace iccs --set storageClassName=longhorn --set registry.password=${HARBOR_RW_PASSWORD} --set registry.username=${HARBOR_RW_USER} --set registry.registry=${HARBOR_HOST} --set commitHash=${CI_COMMIT_SHA}
+    - helm upgrade --install deeptsf_backend ./helm-chart -f helm-chart/values.yaml --namespace iccs --set storageClassName=longhorn --set registry.password=${HARBOR_ROBOT_PASSWORD} --set registry.username=${HARBOR_ROBOT_USER} --set registry.registry=${HARBOR_HOST} --set commitHash=${CI_COMMIT_SHA}
   only:
     - main
     - develop
