modifications for deployment

--- a/helm-chart/Chart.yaml
+++ b/helm-chart/Chart.yaml
@@ -1,5 +1,5 @@
 name: deeptsf_backend
 version: 1.0.0
 apiVersion: v2
-description: deeptsf_backend
+description: "deeptsf_backend"
 appVersion: 1.0.0
