--- a/celery_DeepTSF/conda_worker.yaml
+++ b/celery_DeepTSF/conda_worker.yaml
@@ -152,27 +152,6 @@ dependencies:
     - nfoursid==1.0.1
     - numba==0.59.1
     - numpy==1.26.4
-    - nvidia-cublas-cu11==11.11.3.6
-    - nvidia-cublas-cu12==12.1.3.1
-    - nvidia-cuda-cupti-cu11==11.8.87
-    - nvidia-cuda-cupti-cu12==12.1.105
-    - nvidia-cuda-nvrtc-cu11==11.8.89
-    - nvidia-cuda-nvrtc-cu12==12.1.105
-    - nvidia-cuda-runtime-cu11==11.8.89
-    - nvidia-cuda-runtime-cu12==12.1.105
-    - nvidia-cudnn-cu11==9.0.0.312
-    - nvidia-cudnn-cu12==8.9.2.26
-    - nvidia-cufft-cu11==10.9.0.58
-    - nvidia-cufft-cu12==11.0.2.54
-    - nvidia-curand-cu11==10.3.0.86
-    - nvidia-curand-cu12==10.3.2.106
-    - nvidia-cusolver-cu11==11.4.1.48
-    - nvidia-cusolver-cu12==11.4.5.107
-    - nvidia-cusparse-cu11==11.7.5.86
-    - nvidia-cusparse-cu12==12.1.0.106
-    - nvidia-nccl-cu12==2.19.3
-    - nvidia-nvjitlink-cu12==12.4.99
-    - nvidia-nvtx-cu12==12.1.105
     - nvsmi==0.4.2
     - oauthlib==3.2.2
     - openpyxl==3.1.2
@@ -226,7 +205,6 @@ dependencies:
     - python-dateutil==2.9.0.post0
     - python-dotenv==1.0.1
     - python-multipart==0.0.9
-    - pytorch-lightning==2.2.1
     - pytz==2024.1
     - pyyaml==6.0.1
     - pyzmq==25.1.2
@@ -271,10 +249,6 @@ dependencies:
     - threadpoolctl==3.4.0
     - toml==0.10.2
     - tomli==2.0.1
-    - torch==2.2.2
-    - torchaudio==2.2.2
-    - torchmetrics==1.3.2
-    - torchvision==0.17.2
     - tornado==6.4
     - tqdm==4.66.2
     - trace-updater==0.0.9.1
@@ -286,7 +260,7 @@ dependencies:
     - u8darts==0.28.0
     - urllib3==2.2.1
     - utilsforecast==0.1.2
-    - uvicorn[standard]
+    - uvicorn==0.29.0
     - virtualenv==20.25.1
     - waitress==3.0.0
     - watchfiles==0.21.0
