--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -7,6 +7,8 @@ app:
     tag: latest
   env:
     APP_BACKEND_URL: "deeptsf-backend.dev.deployai.eu"
+    AWS_ACCESS_KEY_ID: ""
+    AWS_SECRET_ACCESS_KEY: ""
   replicas: 1
   memory_limit: 4Gi
 
