modify deployment files

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,3 +44,6 @@ deploy-dev:
     - shared
   environment:
     name: dev
+  variables:
+    AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+    AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
