--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,7 +37,7 @@ deploy-dev:
     - echo "Checking Kubernetes cluster connectivity..."
     - kubectl get nodes
     - echo "Deploying to Rancher using Helm..."
-    - helm upgrade --install deeptsf-backend ./helm-chart -f helm-chart/values.yaml --namespace iccs --set storageClassName=longhorn --set registry.password=${HARBOR_ROBOT_PASSWORD} --set registry.username=${HARBOR_ROBOT_USER} --set registry.registry=${HARBOR_HOST} --set commitHash=${CI_COMMIT_SHA} --set app.env.AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID} --set app.env.AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+    - helm upgrade --install deeptsf-backend ./helm-chart -f helm-chart/values.yaml --namespace iccs --set storageClassName=longhorn --set registry.password=${HARBOR_ROBOT_PASSWORD} --set registry.username=${HARBOR_ROBOT_USER} --set registry.registry=${HARBOR_HOST} --set commitHash=${CI_COMMIT_SHA} --set app.env.AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID} --set app.env.AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY} --set app.env.MINIO_CLIENT_URL=${MINIO_CLIENT_URL} --set app.env.MINIO_SSL=${MINIO_SSL}
   only:
     - master
   tags:
@@ -45,5 +45,7 @@ deploy-dev:
   environment:
     name: dev
   variables:
+    MINIO_CLIENT_URL: ${MINIO_CLIENT_URL}
+    MINIO_SSL: ${MINIO_SSL}
     AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
     AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
