--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -9,6 +9,8 @@ app:
     APP_BACKEND_URL: "deeptsf-backend.dev.deployai.eu"
     AWS_ACCESS_KEY_ID: ""
     AWS_SECRET_ACCESS_KEY: ""
+    MINIO_CLIENT_URL: ""
+    MINIO_SSL: ""
   replicas: 1
   memory_limit: 4Gi
 
