--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,14 +44,14 @@ deploy-dev:
     - shared
   environment:
     name: dev
-  variables:
-    MINIO_CLIENT_URL: $MINIO_CLIENT_URL
-    MINIO_SSL: ${MINIO_SSL}
-    AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
-    AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
-    MLFLOW_TRACKING_URI: ${MLFLOW_TRACKING_URI}
-    MLFLOW_S3_ENDPOINT_URL: ${MLFLOW_S3_ENDPOINT_URL}
-    MINIO_ACCESS_KEY: ${MINIO_ACCESS_KEY}
-    MINIO_SECRET_KEY: ${MINIO_SECRET_KEY}
-    USE_KEYCLOAK: ${USE_KEYCLOAK}
+  # variables:
+  #   MINIO_CLIENT_URL: $MINIO_CLIENT_URL
+  #   MINIO_SSL: ${MINIO_SSL}
+  #   AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+  #   AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
+  #   MLFLOW_TRACKING_URI: ${MLFLOW_TRACKING_URI}
+  #   MLFLOW_S3_ENDPOINT_URL: ${MLFLOW_S3_ENDPOINT_URL}
+  #   MINIO_ACCESS_KEY: ${MINIO_ACCESS_KEY}
+  #   MINIO_SECRET_KEY: ${MINIO_SECRET_KEY}
+  #   USE_KEYCLOAK: ${USE_KEYCLOAK}
     
