--- a/helm-chart/templates/app-ingress.yaml
+++ b/helm-chart/templates/app-ingress.yaml
@@ -5,6 +5,7 @@ metadata:
   name: {{ .Release.Name }}-{{ .Values.app.service.name }}-ingress
   annotations:
     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
     {{- range $key, $value := .Values.ingress.annotations }}
     {{ $key }}: {{ $value | quote }}
     {{- end }}
