--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,12 +13,20 @@ build-app:
   before_script:
     - docker info
   script:
-    - echo "Building Docker image for deeptsf backend..."
-    - docker build -t ${HARBOR_HOST}/iccs/deeptsf-backend:latest deeptsf_backend
     - echo "Logging into Harbor using Robot Account..."
     - echo ${HARBOR_ROBOT_PASSWORD} | docker login ${HARBOR_HOST} -u ${HARBOR_ROBOT_USER} --password-stdin
+
+    - echo "Building Docker image for deeptsf backend..."
+    - docker build -t ${HARBOR_HOST}/iccs/deeptsf-backend:latest deeptsf_backend
     - echo "Pushing Docker image to Harbor..."
     - docker push ${HARBOR_HOST}/iccs/deeptsf-backend:latest
+
+
+    - echo "Building Docker image for dagster..."
+    - docker build -t ${HARBOR_HOST}/iccs/deeptsf-dagster:latest dagster-deeptsf
+    - echo "Pushing Docker image to Harbor..."
+    - docker push ${HARBOR_HOST}/iccs/deeptsf-dagster:latest
+
   only:
     - master
   tags:
@@ -44,6 +52,3 @@ deploy-dev:
     - shared
   environment:
     name: dev
-
-
-
