--- a/deeptsf_backend/dagster-deeptsf/config/Dockerfile
+++ b/deeptsf_backend/dagster-deeptsf/config/Dockerfile
@@ -14,13 +14,13 @@ RUN conda env create -f conda.yaml
 SHELL ["conda", "run", "-n", "DeepTSF_env", "/bin/bash", "-c"]
 
 # Install additional dependencies
-RUN pip install dagster dagster-webserver dagster-shell
+RUN pip install dagster==1.8.13 dagster-webserver==1.8.13 dagster-shell==0.24.13 dagster-mlflow==0.24.13
 RUN pip install protobuf==3.20.*
 RUN pip install minio
 
-COPY . .
-
 EXPOSE 8006
+
+COPY . .
 
 WORKDIR /app/dagster-deeptsf
 # Set the DAGSTER_HOME environment variable
