--- a/helm-chart/Chart.yaml
+++ b/helm-chart/Chart.yaml
@@ -1,5 +1,5 @@
-name: deeptsf-backend
+name: deeptsf
 version: 1.0.0
 apiVersion: v2
-description: "deeptsf-backend"
+description: "deeptsf"
 appVersion: 1.0.0
