--- a/helm-chart/templates/app-ingress.yaml
+++ b/helm-chart/templates/app-ingress.yaml
@@ -2,30 +2,28 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ .Release.Name }}-{{ .Values.app.service.name }}-ingress
-  annotations:
-    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
-    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
-    {{- range $key, $value := .Values.ingress.annotations }}
-    {{ $key }}: {{ $value | quote }}
-    {{- end }}
-  labels:
-    release: {{ .Release.Name }}
-
+  name: {{ .Release.Name }}-ingress
 spec:
-  tls:
-    - hosts:
-        - {{ .Values.app.host }}
-      secretName: "{{ .Values.ingress.tlsSecretName }}"
   rules:
-    - host: {{ .Values.app.host }}
+    - host: {{ .Values.backend.host }}
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: "{{ .Release.Name }}-{{ .Values.app.service.name }}"
+                name: "{{ .Release.Name }}-{{ .Values.backend.service.name }}"
                 port:
                   number: 80
+    - host: {{ .Values.dagster.host }}
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: "{{ .Release.Name }}-{{ .Values.dagster.service.name }}"
+                port:
+                  number: 80
+
 {{- end }}
