--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,8 +23,7 @@ build-app:
 
 
     - echo "Building Docker image for dagster..."
-    - cd deeptsf_backend/dagster-deeptsf/
-    - docker build -t ${HARBOR_HOST}/iccs/deeptsf-dagster:latest config
+    - docker build -t ${HARBOR_HOST}/iccs/deeptsf-dagster:latest -f deeptsf_backend/dagster-deeptsf/config/Dockerfile deeptsf_backend
     - echo "Pushing Docker image to Harbor..."
     - docker push ${HARBOR_HOST}/iccs/deeptsf-dagster:latest
 
