--- a/helm-chart/templates/app-ingress.yaml
+++ b/helm-chart/templates/app-ingress.yaml
@@ -2,7 +2,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ .Release.Name }}-deeptsf-ingress
+  name: {{ .Release.Name }}-deeptsf-backend-ingress
   annotations:
     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
     nginx.ingress.kubernetes.io/proxy-body-size: "100m"
