--- a/helm-chart/templates/app-deploy-backend.yaml
+++ b/helm-chart/templates/app-deploy-backend.yaml
@@ -43,9 +43,9 @@ spec:
         resources:
           limits:
             memory: {{ .Values.backend.memory_limit | quote }}
-        envFrom:
-        - configMapRef:
-            name: {{ .Release.Name }}-{{ .Values.backend.service.name }}-cm
+        # envFrom:
+        # - configMapRef:
+        #     name: {{ .Release.Name }}-{{ .Values.backend.service.name }}-cm
         env:
         - name: AWS_ACCESS_KEY_ID
           value: {{ required "AWS_ACCESS_KEY_ID environment variable is required" .Values.env.AWS_ACCESS_KEY_ID | quote }}
@@ -73,4 +73,3 @@ spec:
           value: {{ required "TOKEN_ISSUER_URL environment variable is required" .Values.env.TOKEN_ISSUER_URL | quote }}
         ports:
         - containerPort: 8081
-        - containerPort: 8006
