--- a/helm-chart/templates/app-ingress.yaml
+++ b/helm-chart/templates/app-ingress.yaml
@@ -17,22 +17,23 @@ spec:
     - host: {{ .Values.backend.host }}
       http:
         paths:
-          - backend:
+          - path: /
+            pathType: Prefix
+            backend:
               service:
                 name: "{{ .Release.Name }}-deeptsf-backend"
                 port:
                   number: 80
-            path: / 
-            pathType: Prefix 
     - host: {{ .Values.dagster.host }}
       http:
         paths:
-          - backend: 
-              service: 
-                name: "{{ .Release.Name }}-deeptsf-dagster" 
-                port: 
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: "{{ .Release.Name }}-deeptsf-dagster"
+                port:
                   number: 81
-            path: / 
-            pathType: Prefix 
+
 
 {{- end }}
