--- a/helm-chart/templates/app-ingress.yaml
+++ b/helm-chart/templates/app-ingress.yaml
@@ -17,23 +17,22 @@ spec:
     - host: {{ .Values.backend.host }}
       http:
         paths:
-          - path: /
-            pathType: Prefix
-            backend:
+          - backend:
               service:
                 name: "{{ .Release.Name }}-deeptsf-backend"
                 port:
                   number: 80
+            path: / 
+            pathType: Prefix 
     - host: {{ .Values.dagster.host }}
       http:
         paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: "{{ .Release.Name }}-deeptsf-dagster"
-                port:
-                  number: 81
-
+          - backend: 
+              service: 
+                name: "{{ .Release.Name }}-deeptsf-dagster" 
+                port: 
+                  number: 80
+            path: / 
+            pathType: Prefix 
 
 {{- end }}
