--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -166,9 +166,9 @@ services:
       - 8006
     ports:
       - 8006:8006
-    volumes:
-      - dagster-logs:/app/dagster-deeptsf
-      - ./uc2/user_datasets:/app/dagster-deeptsf/user_datasets
+    # volumes:
+    #   - dagster-logs:/app/dagster-deeptsf
+    #   - ./uc2/user_datasets:/app/dagster-deeptsf/user_datasets
       # - ./dagster-deeptsf/dagster_deeptsf:/app/dagster-deeptsf/dagster_deeptsf  #debugging only
     networks:
       - load-forecasting-net
